--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,6 +2,10 @@
 @import lib/base
 @import grid/grid
 
+@import fonts
+@import variables
+@import icon
+
 .pull-right
   float: right
 .pull-left
@@ -22,26 +26,73 @@
 a
   cursor: pointer
 
+html
+  width: 100%
+  background-color: $dark-blue
+
 body
-  font: 200 14px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif
-  background: #313949
-
-  overflow: auto
-  -webkit-overflow-scrolling: touch
-
-.welcome
-  padding: 10px 20px 20px
-  background: white
-
-  p, ol, ul, h1, h2, h3, h4, h5
-    margin-top: .5em
-    margin-bottom: .8em
-  h1
-    text-align: center
-  ul, ol li
-    list-style: inherit
-    margin-left: inherit
-    padding-left: inherit
+  font: normal #{$text-normal}/1.4 Montserrat, "Helvetica Neue", Helvetica, Verdana, sans-serif
+  max-width: 1020px
+  margin: 0 auto
 
 
-@import icon
+.section
+  &--bg
+    background: url('../images/background.png') 0 0 no-repeat
+    background-size: cover
+    padding: 66px 100px
+    color: white
+
+    .logo
+      margin-bottom: 20px
+      margin-left: -10px
+    .icon-group
+      padding-left: 10px
+      margin-top: 40px
+
+.heading-title
+  font-size: $text-big
+  font-weight: 800
+  line-height: 1.4
+  margin-bottom: 35px
+
+.heading-subtitle
+  font-size: $text-big
+  font-weight: 600
+  margin-bottom: 28px
+  line-height: 1.2
+
+.btn
+  display: inline-block
+  appearance: none
+  border: 2px solid transparent
+  border-radius: 50px
+  padding: 18px 50px
+  font-size: 13px
+  font-weight: 600
+  line-height: 1
+  transition: background-color .1s linear
+
+  &:hover
+    background-color: rgba($white, .4)
+  &:active
+    background-color: rgba($white, .8)
+
+  &.btn--red
+    border-color: $red
+    color: $red
+  &.btn--orange
+    border-color: $orange
+    color: $orange
+
+.btn-group
+  margin-bottom: 20px
+  margin-left: -24px
+  .btn
+    margin-left: 24px
+
+.icon-group
+  margin-bottom: 20px
+  margin-left: -30px
+  .icon
+    margin-left: 30px
