--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -22,6 +22,31 @@ html
         span.icon.icon-mongodb
         span.icon.icon-laravel
         span.icon.icon-angularjs
+    section.section
+      .section__in.features: .features__in
+        .features__side
+          .heading-title.text-red Features
+        .features__main
+          .feature
+            .feature__main
+              h3 Customizable
+              div Have the freedom to design a decision rules you need and to manage data structure on the fly in a easy to understand way.
+            .feature__index 1
+          .feature
+            .feature__main
+              h3 Split testing
+              div You can group your decision table to run a A/B tests. Later, you can leave only one, that shows best results.
+            .feature__index 2
+          .feature
+            .feature__main
+              h3 Analytics and Decision History
+              div You can review all previous decisions made by your tables and to analyze what rules is triggered more often.
+            .feature__index 3
+          .feature
+            .feature__main
+              h3 Production-tested
+              div You can review all previous decisions made by your tables and to analyze what rules is triggered more often.
+            .feature__index 4
 
     // build:js js/app.min.js
     script(src='js/config.js')
