--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,25 +3,26 @@ html
   head(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    title <%= appname %>
+    title Gandalf
     link(rel='stylesheet', href='css/app.css')
   body
     section.section.section--bg
-      .logo
-        img(src="images/logo.png", alt="Gandalf Logo")
-      .heading-subtitle Take control over your risks
-      .heading-title Open-Source Decision Engine
-        br
-        | for Big-Data
+      .section__in
+        .logo
+          img(src="images/logo.png", alt="Gandalf Logo")
+        .heading-subtitle Take control over your risks
+        .heading-title Open-Source Decision Engine
+          br
+          | for Big-Data
 
-      .btn-group
-        a.btn.btn--red View on GitHub
-        a.btn.btn--orange Read API Docs
-      .icon-group
-        span.icon.icon-php7
-        span.icon.icon-mongodb
-        span.icon.icon-laravel
-        span.icon.icon-angularjs
+        .btn-group
+          a.btn.btn--red View on GitHub
+          a.btn.btn--orange Read API Docs
+        .icon-group
+          .icon-shadow: a.icon.icon-php7(rel="noindex", href="http://php.net/")
+          .icon-shadow: a.icon.icon-mongodb(rel="noindex", href="https://www.mongodb.org/")
+          .icon-shadow: a.icon.icon-laravel(rel="noindex", href="https://laravel.com/")
+          .icon-shadow: a.icon.icon-angularjs(rel="noindex", href="https://angularjs.org/")
     section.section
       .section__in.features: .features__in
         .features__side
@@ -47,9 +48,33 @@ html
               h3 Production-tested
               div You can review all previous decisions made by your tables and to analyze what rules is triggered more often.
             .feature__index 4
+    section.section.section--how
+      .section__in
+        .section__title How does it work?
+        .section__subtitle Set up your scoring table
+          br
+          | or use a template.
+        img.section__block(src="http://placehold.it/1000x600", alt="Decision table preview")
+        .section__subtitle Send some data to <br/>Gandalf, and get client <br/>score in result!
+        .section__block
+          pre: code.language-bash
+            | $ curl -u API_KEY:API_SECRET http://gandalf-api.nebo15.com/api/v1/tables/56cb3882f70466293d8b456f/decisions -d '{ "borrowers_phone_verification": "sample", "contact_person_phone_verification":"sample","internal_credit_history":"sample","employment":true,"property":true}'
+    section.section.section--story
+      .section__in
+        .story: .story__in
+          .story__side
+            img(src="images/gandalf-shadow.png" alt="Gandalf Logo symbol with shadow")
+          .story__main
+            .heading-title.text-red Story behind Gandlaf
+            p We - are production oriented team, and we work for a fintech company. Almost all project that we created need a decision engine that reduces business risks. And all solutions we can find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
+            p To make is suitable for Big Data we decided to build it on top of use very reliable open-source database MongoDB, that have good sharding capabilities and easy to maintain.
+            p Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.
+    section.section.section--footer
+      .icon.icon-nebo15
+      .copyright Copyright ⓒ 2015. All rights reserved
 
     // build:js js/app.min.js
-    script(src='js/config.js')
-    script(src='js/app.js')
+    script(src="bower_components/prism/prism.js")
+    script(src="bower_components/prism/components/prism-bash.js")
     // endbuild
 
