--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,19 +1,23 @@
-
 @import lib/base
 @import grid/grid
 
 @import fonts
 @import variables
 @import icon
+@import ../bower_components/prism/themes/prism.css
 
 .pull-right
   float: right
+
 .pull-left
   float: left
+
 .vertical-align
   vertical-align: middle
+
 .center
   text-align: center
+
 .uppercase
   text-transform: uppercase
 
@@ -29,14 +33,14 @@ a
 html
   width: 100%
   background-color: $dark-blue
-
+  min-width: 900px
 body
   font: normal #{$text-normal}/1.4 Montserrat, "Helvetica Neue", Helvetica, Verdana, sans-serif
-  max-width: 1020px
-  margin: 0 auto
-
 
 .section
+  .section__in
+    max-width: 1020px
+    margin: 0 auto
   &--bg
     background: url('../images/background.png') 0 0 no-repeat
     background-size: cover
@@ -49,7 +53,66 @@ body
     .icon-group
       padding-left: 10px
       margin-top: 40px
+      .icon-shadow
+        position: relative
+        display: inline-block
+        .icon
+          position: relative
+          z-index: 1
+        &:before
+          content: ''
+          z-index: 0
+          position: absolute
+          width: 100%
+          height: 0
+          left: 0
+          top: 50%
+          box-shadow: 0 0 20px 5px rgba(white, .3)
+
   padding: 60px
+
+  &__title
+    font-size: $text-big
+    font-weight: 800
+    line-height: 1.4
+    margin-bottom: 40px
+
+  &__subtitle
+    font-size: $text-medium
+    font-weight: 300
+    line-height: 1.4
+    margin-bottom: 25px
+
+  img
+    display: inline-block
+    max-width: 100%
+
+  &--how
+    margin-top: -60px - 87px
+    padding-top: 80px + 87px
+    background: url('../images/koi.png') top center no-repeat
+    z-index: -1
+    position: relative
+    .section__title, .section__subtitle
+      color: white
+      text-align: center
+
+    .section__in
+      max-width: 580px
+      margin: 0 auto
+  .section__block
+    background-color: $white
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.63)
+    margin-bottom: 80px
+  &--story
+    background-color: white
+  &--footer
+    color: white
+    text-align: center
+
+.copyright
+  font-size: $text-small
+  margin-top: 20px
 
 .heading-title
   font-size: $text-big
@@ -116,18 +179,24 @@ body
 
   &__main, &__side
     display: table-cell
+  .feature
+    margin-bottom: 30px
 
 .feature
   position: relative
   display: block
-  min-height: 140px
+  min-height: 160px
   padding-left: 20px
   max-width: 400px
+
+  font-size: $text-normal
 
   h3
     font-size: $text-medium
     font-weight: 700
     margin-bottom: 20px
+  div
+    max-width: 350px
   &__index
     position: absolute
     top: 20px
@@ -140,3 +209,16 @@ body
   &__main
     position: relative
     z-index: 1
+
+.story
+  &__in
+    display: table
+  &__side
+    width: 300px
+    text-align: center
+  &__side, &__main
+    display: table-cell
+    vertical-align: top
+  &__main
+    p
+      margin-top: 20px
