--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,7 +6,7 @@ html
     title Gandalf
     link(rel='stylesheet', href='css/app.css')
   body
-    section.section.section--bg
+    section.section.section--bg.section--gradient
       .section__in
         .logo
           img(src="images/logo.png", alt="Gandalf Logo")
