--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -41,11 +41,34 @@ body
   .section__in
     max-width: 1020px
     margin: 0 auto
+
+
   &--bg
-    background: url('../images/background.png') 0 0 no-repeat
-    background-size: cover
+
+    position: relative
     padding: 66px 100px
     color: white
+    &:before
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background: url('../images/background.png') 0 0 no-repeat
+      background-size: cover
+      z-index: -1
+
+    &:after
+      content: ''
+      position: absolute
+      bottom: 0
+      height: 300px
+      width: 100%
+      left: 0
+      z-index: -1
+      background: linear-gradient(0deg, rgba(white, .8), rgba(white, .6) 60%, rgba(white, 0) 100%)
+
 
     .logo
       margin-bottom: 20px
@@ -59,15 +82,7 @@ body
         .icon
           position: relative
           z-index: 1
-        &:before
-          content: ''
-          z-index: 0
-          position: absolute
-          width: 100%
-          height: 0
-          left: 0
-          top: 50%
-          box-shadow: 0 0 20px 5px rgba(white, .3)
+
 
   padding: 60px
 
