--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -66,7 +66,7 @@ html
             img(src="images/gandalf-shadow.png" alt="Gandalf Logo symbol with shadow")
           .story__main
             .heading-title.text-red Story behind Gandlaf
-            p We - are production oriented team, and we work for a fintech company. Almost all project that we created need a decision engine that reduces business risks. And all solutions we can find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
+            p We – are production oriented team, and we work for a fintech company. Almost all project that we created need a decision engine that reduces business risks. And all solutions we can find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
             p To make is suitable for Big Data we decided to build it on top of use very reliable open-source database MongoDB, that have good sharding capabilities and easy to maintain.
             p Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.
     section.section.section--footer
