--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -237,3 +237,9 @@ body
   &__main
     p
       margin-top: 20px
+
+.code-preview
+  padding: 20px
+  //font-size: $text-small
+  pre, code
+    font: normal #{$text-small}/1.2 Menlo, Monaco, Consolas, "Lucida Console", monospace !important
