--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,7 +3,9 @@ html
   head(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    title Gandalf
+    title Gandalf. Open-Source Decision Engine for Big-Data
+    link(rel="icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
+    link(rel="shortcut icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
     // build:css /css/app.min.css
     link(rel='stylesheet', href='/bower_components/highlightjs/styles/github-gist.css')
     link(rel='stylesheet', href='/css/app.css')
@@ -77,5 +79,5 @@ html
             p To make is suitable for Big Data we decided to build it on top of use very reliable open-source database MongoDB, that have good sharding capabilities and easy to maintain.
             p Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.
     section.section.section--footer
-      .icon.icon-nebo15
+      a.icon.icon-nebo15(href="http://nebo15.com", rel="noindex", title="Nebo15 Website")
       .copyright Copyright ⓒ 2016. All rights reserved
