Added bugsnag thanks

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -81,3 +81,7 @@ html
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", rel="noindex", title="Nebo15 Website")
       .copyright ⓒ Nebo #15, 2016
+      .thanks 
+        | We want to thank&nbsp;
+        a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag 
+        | &nbsp;for a free Open Source license.
