Added thanks styles

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -124,7 +124,8 @@ body
     color: white
     text-align: center
 
-.copyright
+.copyright,
+.thanks
   font-size: $text-small
   margin-top: 20px
 
