--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head(lang='en')
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+    //meta(name='viewport', content='width=900, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
     link(rel="icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
     link(rel="shortcut icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
@@ -18,7 +18,8 @@ html
     section.section.section--bg.section--gradient
       .section__in
         .logo
-          img(src="images/logo.png", alt="Gandalf Logo")
+          .icon.icon-logo
+          //img(src="images/logo.png", alt="Gandalf Logo")
         .heading-subtitle Take control over your risks
         .heading-title Open-Source Decision Engine
           br
@@ -81,7 +82,7 @@ html
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", rel="noindex", title="Nebo15 Website")
       .copyright ⓒ Nebo #15, 2016
-      .thanks 
+      .thanks
         | We want to thank&nbsp;
-        a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag 
+        a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag
         | &nbsp;for a free Open Source license.
