--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -28,6 +28,7 @@ html
         .btn-group
           a.btn.btn--red(href="https://github.com/Nebo15/gandalf.api", title="View on Github", rel="noindex") View on GitHub
           a.btn.btn--orange(href="http://nebo15.github.io/qbill.docs/gandalf.html#introduction", title="Gandalf Docs", rel="noindex") Read API Docs
+          a.btn.btn--red(href="./service", title="Gandalf Service", rel="noindex") Try Gandalf
         .icon-group
           .icon-shadow: a.icon.icon-php7(rel="noindex", href="http://php.net/")
           .icon-shadow: a.icon.icon-mongodb(rel="noindex", href="https://www.mongodb.org/")
