add browser mockup

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -65,7 +65,7 @@ html
         .section__subtitle Set up your scoring table
           br
           | or use a template.
-        img.section__block(src="http://placehold.it/1000x600", alt="Decision table preview")
+        img.section__screen(src="../images/gandalf-table-mockup.png", alt="Decision table preview")
         .section__subtitle Send some data to <br/>Gandalf, and get client <br/>score in result!
         .section__block
           .code-preview: pre: code.bash
