--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -114,6 +114,9 @@ body
     .section__in
       max-width: 580px
       margin: 0 auto
+  .section__screen
+    box-shadow: 0 0 5px rgba(0,0,0, 0.63)
+    margin-bottom: 80px
   .section__block
     background-color: $white
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.63)
