Changed link to api docs on landing page

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -26,8 +26,8 @@ html
           | for Big-Data
 
         .btn-group
-          a.btn.btn--red(href="https://github.com/Nebo15/gandalf.api", title="View on Github", rel="noindex") View on GitHub
-          a.btn.btn--orange(href="http://nebo15.github.io/qbill.docs/gandalf.html#introduction", title="Gandalf Docs", rel="noindex") Read API Docs
+          a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="noindex") View on GitHub
+          a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs", rel="noindex") Read API Docs
           a.btn.btn--red(href="./service", title="Gandalf Service", rel="noindex") Try Gandalf
         .icon-group
           .icon-shadow: a.icon.icon-php7(rel="noindex", href="http://php.net/")
