--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -47,17 +47,17 @@ html
           .feature
             .feature__main
               h3 Split testing
-              div You can group your decision table to run a A/B tests. Later, you can leave only one, that shows best results.
+              div Each table can have infinite number of different variants, you can allocate traffic between them and leave only best one later.
             .feature__index 2
           .feature
             .feature__main
               h3 Analytics and Decision History
-              div You can review all previous decisions made by your tables and to analyze what rules is triggered more often.
+              div All decisions are saved with all metadata: request parameters, decision table at request moment of time and decision itself.
             .feature__index 3
           .feature
             .feature__main
               h3 Production-tested
-              div You can review all previous decisions made by your tables and to analyze what rules is triggered more often.
+              div Several large PSP's and online lending platforms already use Gandalf.
             .feature__index 4
     section.section.section--how
       .section__in
