--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -62,11 +62,11 @@ html
     section.section.section--how
       .section__in
         .section__title How does it work?
-        .section__subtitle Set up your scoring table
+        .section__subtitle Set up your Decision or Scoring Table
           br
           | or use a template.
         img.section__screen(src="../images/gandalf-table-mockup.png", alt="Decision table preview")
-        .section__subtitle Send some data to <br/>Gandalf, and get client <br/>score in result!
+        .section__subtitle Send your data to <br/>Gandalf, and get client <br/>score in result!
         .section__block
           .code-preview: pre: code.bash
             include ./content/curl-sample.html
