--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -28,7 +28,7 @@ html
         .btn-group
           a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="noindex") View on GitHub
           a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs", rel="noindex") Read API Docs
-          a.btn.btn--red(href="http://apps.gndf.io/#", title="Gandalf Service", rel="noindex") Try Gandalf
+          a.btn.btn--red(href="https://apps.gndf.io/#", title="Gandalf Service", rel="noindex") Try Gandalf
         .icon-group
           .icon-shadow: a.icon.icon-php7(rel="noindex", href="http://php.net/")
           .icon-shadow: a.icon.icon-mongodb(rel="noindex", href="https://www.mongodb.org/")
