Fixed nebo15 footer links

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -81,8 +81,11 @@ html
             p To make is suitable for Big Data we decided to build it on top of use very reliable open-source database MongoDB, that have good sharding capabilities and easy to maintain.
             p Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.
     section.section.section--footer
-      a.icon.icon-nebo15(href="http://nebo15.com", rel="noindex", title="Nebo15 Website")
-      .copyright ⓒ Nebo #15, 2016
+      a.icon.icon-nebo15(href="http://nebo15.com", title="Nebo #15 Website")
+      .copyright 
+        | ⓒ&ndsp;
+        a(href="http://nebo15.com", title="Nebo #15 Website") Nebo #15,&nbsp;
+        | 2016.
       .thanks
         | We want to thank&nbsp;
         a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag
