--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,6 +4,8 @@ html
     meta(charset='UTF-8')
     //meta(name='viewport', content='width=900, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
+    meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
+    meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management")
     link(rel="icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
     link(rel="shortcut icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
     // build:css /css/app.min.css
