Improved landing texts

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -22,10 +22,10 @@ html
         .logo
           .icon.icon-logo
           //img(src="images/logo.png", alt="Gandalf Logo")
-        .heading-subtitle Take control over your risks
+        .heading-subtitle Take control over your risks.
         .heading-title Open-Source Decision Engine
           br
-          | for Big-Data
+          | for Big-Data.
 
         .btn-group
           a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="noindex") View on GitHub
@@ -43,24 +43,29 @@ html
         .features__main
           .feature
             .feature__main
-              h3 Customizable
-              div Have the freedom to design a decision rules you need and to manage data structure on the fly in a easy to understand way.
+              h3 Free
+              div All source codes is published under GLP license. You are free to migrate from SaaS to your own installation at anytime.
             .feature__index 1
           .feature
             .feature__main
-              h3 Split testing
-              div Each table can have infinite number of different variants, you can allocate traffic between them and leave only best one later.
+              h3 Flexible
+              div You have freedom to design any decision rules on any data model, and to manage everything on the fly, without re-deploying stuff.
             .feature__index 2
           .feature
             .feature__main
-              h3 Analytics and Decision History
-              div All decisions are saved with all metadata: request parameters, decision table at request moment of time and decision itself.
+              h3 Rich functionality
+              div Define decision and scoring tables. Add variants to run split tests. Change allocation between them. Review and analyze all decisions. Debug tables in GUI. Share access with your collaborators.
             .feature__index 3
           .feature
             .feature__main
-              h3 Production-tested
-              div Several large PSP's and online lending platforms already use Gandalf.
+              h3 Simple to use and maintain
+              div GUI is simple and intuitive. Docs are well-written. Code is covered with tests.
             .feature__index 4
+          .feature
+            .feature__main
+              h3 Enterprise Ready
+              div Several large PSP's and online lending platforms already use Gandalf. Join them!
+            .feature__index 5
     section.section.section--how
       .section__in
         .section__title How does it work?
@@ -80,8 +85,8 @@ html
           .story__main
             .heading-title.text-red Story behind Gandlaf
             p We – are production oriented team, and we work for a fintech company. Almost all project that we created need a decision engine that reduces business risks. And all solutions we can find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
-            p To make is suitable for Big Data we decided to build it on top of use very reliable open-source database MongoDB, that have good sharding capabilities and easy to maintain.
-            p Also we believe that vendor-lock is a bad thing, so we published all source code on a MIT license, so you are free to change it as you wish.
+            p To make is suitable for Big Data we decided to build it on top of reliable open-source database MongoDB, that have good scaling capabilities and easy to maintain.
+            p Also we believe that vendor-lock is a bad thing, so we published all source code on a GPL license, so you are free to change it as you wish.
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", title="Nebo #15 Website")
       .copyright 
