--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head(lang='en')
     meta(charset='UTF-8')
-    //meta(name='viewport', content='width=900, initial-scale=1')
+    meta(name='viewport', content='width=900, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
     meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
     meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing")
@@ -11,10 +11,6 @@ html
     // build:css /css/app.min.css
     link(rel='stylesheet', href='/bower_components/highlightjs/styles/github-gist.css')
     link(rel='stylesheet', href='/css/app.css')
-    // endbuild
-    // build:js /js/app.min.js
-    script(src="/bower_components/highlightjs/highlight.pack.js")
-    script(src="/js/app.js")
     // endbuild
   body
     section.section.section--bg.section--gradient
@@ -97,3 +93,15 @@ html
         | We want to thank&nbsp;
         a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag
         | &nbsp;for a free Open Source license.
+  // build:js /js/app.min.js
+  script(src="/bower_components/highlightjs/highlight.pack.js")
+  script(src="/js/app.js")
+  // endbuild
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-43266496-16', 'auto');
+    ga('send', 'pageview');
+
