Minimize everything on build

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head(lang='en')
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=900, initial-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
     meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
     meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing")
@@ -85,7 +85,7 @@ html
             p Also we believe that vendor-lock is a bad thing, so we published all source code on a GPL license, so you are free to change it as you wish.
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", title="Nebo #15 Website")
-      .copyright 
+      .copyright
         | ⓒ&ndsp;
         a(href="http://nebo15.com", title="Nebo #15 Website") Nebo #15,&nbsp;
         | 2016.
