--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -86,9 +86,9 @@ html
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", title="Nebo #15 Website")
       .copyright
-        | ⓒ&ndsp;
-        a(href="http://nebo15.com", title="Nebo #15 Website") Nebo #15,&nbsp;
-        | 2016.
+        | &copy;&ndsp;
+        a(href="http://nebo15.com", title="Nebo #15 Website") Nebo #15
+        | ,&nbsp;2016.
       .thanks
         | We want to thank&nbsp;
         a(href="http://blog.bugsnag.com/bugsnag-loves-open-source") BugSnag
