--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -86,7 +86,7 @@ html
     section.section.section--footer
       a.icon.icon-nebo15(href="http://nebo15.com", title="Nebo #15 Website")
       .copyright
-        | &copy;&ndsp;
+        | &copy;&nbsp;
         a(href="http://nebo15.com", title="Nebo #15 Website") Nebo #15
         | ,&nbsp;2016.
       .thanks
