Get rid of useless static asset versioning

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,8 +6,8 @@ html
     title Gandalf - Open-Source Decision Engine for Big-Data
     meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
     meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing")
-    link(rel="icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
-    link(rel="shortcut icon", href="/images/favicon.ico?v=123123", type="image/x-icon")
+    link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
+    link(rel="shortcut icon", href="/images/favicon.ico", type="image/x-icon")
     // build:css /css/app.min.css
     link(rel='stylesheet', href='/bower_components/highlightjs/styles/github-gist.css')
     link(rel='stylesheet', href='/css/app.css')
