--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -40,7 +40,7 @@ html
           .feature
             .feature__main
               h3 Free
-              div All source codes is published under GLP license. You are free to migrate from SaaS to your own installation at anytime.
+              div All source codes is published under GPL license. You are free to migrate from SaaS to your own installation at anytime.
             .feature__index 1
           .feature
             .feature__main
