Better use cases on our customers

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,7 +5,7 @@ html
     meta(name='viewport', content='width=900, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
     meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
-    meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing")
+    meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing, anti fraud")
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/x-icon")
     // build:css /css/app.min.css
@@ -60,12 +60,12 @@ html
           .feature
             .feature__main
               h3 Enterprise Ready
-              div Several large PSP's and online lending platforms already use Gandalf. Join them!
+              div Several PSP's use Gandalf as anti fraud, scoring their eCommerce transactions, and as decision engine to route transactions between payment gateways. Online lenders use it to manage cut-off risks and make final decisions on customer applications. Join them and submit us a new use-case!
             .feature__index 5
     section.section.section--how
       .section__in
         .section__title How does it work?
-        .section__subtitle Set up your Decision or Scoring Table
+        .section__subtitle Set up Scoring or Decision Table
           br
           | or use a template.
         img.section__screen(src="../images/gandalf-table-mockup.png", alt="Decision table preview")
