Added link to submit new use cases

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -60,7 +60,10 @@ html
           .feature
             .feature__main
               h3 Enterprise Ready
-              div Several PSP's use Gandalf as anti fraud, scoring their eCommerce transactions, and as decision engine to route transactions between payment gateways. Online lenders use it to manage cut-off risks and make final decisions on customer applications. Join them and submit us a new use-case!
+              div
+              | Several PSP's use Gandalf as anti fraud, scoring their eCommerce transactions, and as decision engine to route transactions between payment gateways. Online lenders use it to manage cut-off risks and to make final decisions on customer applications. Join them and&nbsp;
+              a(href="mailto:support@gndf.io") submit us
+              | &nbsp;a new use-case!
             .feature__index 5
     section.section.section--how
       .section__in
