Added H tags for SEO

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,8 +18,9 @@ html
         .logo
           .icon.icon-logo
           //img(src="images/logo.png", alt="Gandalf Logo")
-        .heading-subtitle Take control over your risks.
-        .heading-title Open-Source Decision Engine
+        h2.heading-subtitle Take control over your risks.
+        h1.heading-title Open-Source
+          b  Decision Engine
           br
           | for Big-Data.
 
@@ -68,11 +69,11 @@ html
     section.section.section--how
       .section__in
         .section__title How does it work?
-        .section__subtitle Set up Scoring or Decision Table
+        h3.section__subtitle Set up Scoring or Decision Table
           br
           | or use a template.
         img.section__screen(src="../images/gandalf-table-mockup.png", alt="Decision table preview")
-        .section__subtitle Send your data to <br/>Gandalf, and get client <br/>score in result!
+        h3.section__subtitle Send your data to <br/>Gandalf, and get client <br/>score in result!
         .section__block
           .code-preview: pre: code.bash
             include ./content/curl-sample.html
