Improved SEO meta tags, open graph and sitemap

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,10 +4,16 @@ html
     meta(charset='UTF-8')
     meta(name='viewport', content='width=900, initial-scale=1')
     title Gandalf - Open-Source Decision Engine for Big-Data
-    meta(name="description" content="Take control over your risks. Define your Decision or Scoring tables. Free version available.")
-    meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, saas, open-source, php, laravel, mongodb, angular.js, analytics, split testing, anti fraud")
+    meta(name="description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.")
+    meta(name="keywords" content="decision engine, scoring, tables, big-data, decision making, risk management, business rules engine, open-source, split testing, anti fraud")
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/x-icon")
+    // Open Graph
+    meta(property="og:title" content="Gandalf - Open-Source Decision Engine for Big-Data")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="https://gndf.io/?utm_medium=social&utm_source=facebook_opengraph")
+    meta(property="og:image" content="https://gndf.io/images/svg/logo.svg")
+    meta(property="og:description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.")
     // build:css /css/app.min.css
     link(rel='stylesheet', href='/bower_components/highlightjs/styles/github-gist.css')
     link(rel='stylesheet', href='/css/app.css')
