Better open-graph logo

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,7 +12,7 @@ html
     meta(property="og:title" content="Gandalf - Open-Source Decision Engine for Big-Data")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://gndf.io/?utm_medium=social&utm_source=facebook_opengraph")
-    meta(property="og:image" content="https://gndf.io/images/svg/logo.svg")
+    meta(property="og:image" content="https://gndf.io/images/logo_og.jpg")
     meta(property="og:description" content="Take control over your risks with decision and scoring engine for big-data applications. Integrates in just few hours. Free version available.")
     // build:css /css/app.min.css
     link(rel='stylesheet', href='/bower_components/highlightjs/styles/github-gist.css')
