Typo in links rel

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,14 +31,14 @@ html
           | for Big-Data.
 
         .btn-group
-          a.btn.btn--red(href="https://apps.gndf.io/#", title="Gandalf Service", rel="noindex") Start using Gandalf
-          a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs", rel="noindex") Read the Docs
-          a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="noindex") Get source code
+          a.btn.btn--red(href="https://apps.gndf.io/#", title="Gandalf Service", rel="nofollow") Start using Gandalf
+          a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs", rel="nofollow") Read the Docs
+          a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="nofollow") Get source code
         .icon-group
-          .icon-shadow: a.icon.icon-php7(rel="noindex", href="http://php.net/")
-          .icon-shadow: a.icon.icon-mongodb(rel="noindex", href="https://www.mongodb.org/")
-          .icon-shadow: a.icon.icon-laravel(rel="noindex", href="https://laravel.com/")
-          .icon-shadow: a.icon.icon-angularjs(rel="noindex", href="https://angularjs.org/")
+          .icon-shadow: a.icon.icon-php7(rel="nofollow", href="http://php.net/")
+          .icon-shadow: a.icon.icon-mongodb(rel="nofollow", href="https://www.mongodb.org/")
+          .icon-shadow: a.icon.icon-laravel(rel="nofollow", href="https://laravel.com/")
+          .icon-shadow: a.icon.icon-angularjs(rel="nofollow", href="https://angularjs.org/")
     section.section
       .section__in.features: .features__in
         .features__side
@@ -78,7 +78,7 @@ html
         h3.section__subtitle Set up Scoring or Decision Table
           br
           | or use a template.
-        img.section__screen(src="../images/gandalf-table-mockup.png", alt="Decision table preview")
+        img.section__screen(src="images/gandalf-table-mockup.png", alt="Decision table preview")
         h3.section__subtitle Send your data to <br/>Gandalf, and get client <br/>score in result!
         .section__block
           .code-preview: pre: code.bash
