--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,8 +31,8 @@ html
           | for Big-Data.
 
         .btn-group
-          a.btn.btn--red(href="https://apps.gndf.io/#", title="Gandalf Service", rel="nofollow") Start using Gandalf
-          a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs", rel="nofollow") Read the Docs
+          a.btn.btn--red(href="https://apps.gndf.io/#", title="Gandalf Service") Start using Gandalf
+          a.btn.btn--orange(href="http://docs.gandalf4.apiary.io/#", title="Gandalf Docs") Read the Docs
           a.btn.btn--red(href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf", title="View on Github", rel="nofollow") Get source code
         .icon-group
           .icon-shadow: a.icon.icon-php7(rel="nofollow", href="http://php.net/")
